--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
 	"editor.formatOnSave": true,
-	"[svelte]": { "editor.defaultFormatter": "svelte.svelte-vscode" }
+	"[svelte]": { "editor.defaultFormatter": "svelte.svelte-vscode" },
+	"git.enableCommitSigning": true
 }
